# riscv-hs

./: .gitignore  CHANGELOG.md  README.md  flake.nix  riscv-hs.cabal
app/: Main.hs
src/: Adders.hs  Bit.hs  Bits.hs  FixedVector.hs  Register.hs
src/FixedVector/: Constructors.hs  TH.hs  Type.hs
test/: AddersSpec.hs  BitSpec.hs  FixedVectorSpec.hs  Main.hs  RegisterSpec.hs
