cabal-version:      3.4
name:               riscv-hs
version:            0.1.0.0
-- synopsis:
-- description:
license:            Apache-2.0
license-file:       LICENSE
author:             Gennadi Schult
maintainer:         gennadi.schult@me.com
-- copyright:
category:           Development
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:
        Bit,
        Adders,
        FixedVector,
        Register
    other-modules:
        FixedVector.TH,
        FixedVector.Type,
        FixedVector.Constructors
    -- other-extensions:
    build-depends:    base, template-haskell
    hs-source-dirs:   src
    default-language: GHC2021
    -- ghc-options: -ddump-splices

executable riscv-hs
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base,
        riscv-hs

    hs-source-dirs:   app
    default-language: GHC2021

test-suite riscv-hs-test
    import:           warnings
    default-language: GHC2021
    other-modules:
      BitSpec,
      AddersSpec,
      FixedVectorSpec,
      RegisterSpec
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Spec.hs
    build-depends:
        base,
        riscv-hs,
        hspec,
        QuickCheck
